--- a/demo.html
+++ b/demo.html
@@ -44,7 +44,7 @@
 <body>
     <center>
         <div class="myform">
-            <form method="post" name="form1" action="timetable.html" onsubmit="return f1()">
+            <form method="post" name="form1" onsubmit="return f1()">
                 <b>First Name: </b>
                 <input type="text" name="a">
                 <br><br><br>
